# oidc_validator

./: Cargo.toml  README.md  authentik_validator.control  build.rs  oidc_validator.control
include/: pg_oauth_shim.h
src/: config.rs  ffi.rs  lib.rs  oidc.rs  validator.rs
tests/pg_regress/expected/: setup.out
tests/pg_regress/sql/: setup.sql
