[package]
publish = false
name = "oidc_validator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "oidc_validator"

[profile.dev]
panic = "abort"

[features]
default = ["pg18"]
pg18 = []

[dependencies]
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
serde = "1.0.228"
pgrx = { version = "0.16.1", features = ["pg18"]}

[build-dependencies]
bindgen = "0.72.1"